# pharmacy-sales-analysis

./: .gitignore  add_ml_stage.py  build_notebook.py  dashboard.py  detected_anomalies.csv  dim_customers.csv  dim_employees.csv  dim_geography.csv  dim_products.csv  dim_suppliers.csv  fact_sales.csv  project_notebook.ipynb  pyproject.toml  requirements.txt  scheduler.py  supplier_sales_2026-06-04_222403.csv  telegram_bot.py  tunnel.py  tunnel_localhost_run.py
