[project]
name = "cluster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "python-telegram-bot>=22.8",
    "rapidfuzz>=3.14.5",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
]
